--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "test",
+  "name": "psl-workshop-api-testing-js",
   "version": "1.0.0",
   "description": "This is a Workshop about Api Testing in JavaScript",
   "main": "index.js",
   "dependencies": {
+    "superagent": "^3.6.0",
+    "superagent-promise": "^1.1.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "http-status-codes": "^1.3.0",
     "mocha": "^3.5.3"
   },
   "scripts": {
